fixed z-index

--- a/css/loading.css
+++ b/css/loading.css
@@ -18,6 +18,7 @@
 @keyframes disappear {
     100% {
         opacity: 0;
+        z-index: unset;
     }
 }
 .animate-disappear {
